; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-ipv4ll.c_sd_ipv4ll_get_address.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_sd-ipv4ll.c_sd_ipv4ll_get_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i64, i64 }

@EINVAL = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sd_ipv4ll_get_address(%struct.in_addr* %0, %struct.in_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.in_addr*, align 8
  %5 = alloca %struct.in_addr*, align 8
  store %struct.in_addr* %0, %struct.in_addr** %4, align 8
  store %struct.in_addr* %1, %struct.in_addr** %5, align 8
  %6 = load %struct.in_addr*, %struct.in_addr** %4, align 8
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i32 @assert_return(%struct.in_addr* %6, i32 %8)
  %10 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  %13 = call i32 @assert_return(%struct.in_addr* %10, i32 %12)
  %14 = load %struct.in_addr*, %struct.in_addr** %4, align 8
  %15 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i32, i32* @ENOENT, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %3, align 4
  br label %27

21:                                               ; preds = %2
  %22 = load %struct.in_addr*, %struct.in_addr** %4, align 8
  %23 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.in_addr*, %struct.in_addr** %5, align 8
  %26 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %25, i32 0, i32 1
  store i64 %24, i64* %26, align 8
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %21, %18
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @assert_return(%struct.in_addr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
